# ir-datasets-clueweb22

./: README.md  pyproject.toml
ir_datasets_clueweb22/: clueweb22.py  test_clueweb22.py
